--- a/Final_Project.qmd
+++ b/Final_Project.qmd
@@ -950,7 +950,11 @@ In summary, this research demonstrates that while certain lifestyle factors—es
 
 ## Code Appendix
 
-## Citations
-
 ```{r codeAppend, ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
 ```
+
+## Citations
+
+::: {#refs}
+:::
+
